# Device-Shadow-for-AWS-IoT-embedded-sdk

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  MISRA.md  README.md  lexicon.txt  manifest.yml  sbom.spdx  shadowFilePaths.cmake
.github/: .cSpellWords.txt  CONTRIBUTING.md
_data/: doc_config.json
main/: deprecated.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__shadow__constants.html  group__shadow__enum__types.html  index.html  modules.html  pages.html  shadow_8c.html  shadow_8h.html  shadow_8h_source.html  shadow__config__defaults_8h.html  shadow__config__defaults_8h_source.html  shadow_assembletopicstring_function.html  shadow_config.html  shadow_design.html  shadow_functions.html  shadow_matchtopicstring_function.html  shadow_porting.html
source/: lexicon.txt  shadow.c
test/: CMakeLists.txt
tools/: misra.config
v1.0.0/: dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__shadow__constants.html  group__shadow__enum__types.html  index.html  modules.html  pages.html  shadow_8c.html  shadow_8h.html  shadow_8h_source.html  shadow__config__defaults_8h.html  shadow__config__defaults_8h_source.html  shadow_config.html  shadow_design.html  shadow_functions.html  shadow_gettopicstring_function.html  shadow_matchtopic_function.html  shadow_porting.html
(+184 files in other folders)
